refactor: add interface BodyParser